# milkypy

./: .gitignore  README.md  example_bot.py  pyproject.toml
docs/: api.md  events.md  structs.md
milkypy/: __init__.py  client.py  message.py
scripts/: generate_client.py  generate_docs.py  generate_structs.py
