[project]
name = "milkypy"
version = "0.1.0"
description = "A Python SDK for the Milky protocol"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "super1207", email = "1875159423@qq.com" }
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=15.0.1",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["milkypy*"]
